crates/math-core/src/snapshots/math_core__parser__tests__boldsymbol_greek_var.snap
---
source: crates/math-core/src/parser.rs
expression: "\\boldsymbol{\\Gamma\\varGamma}"
---
[
  IdentifierStr("𝚪𝜞"),
]
