crates/math-core/src/snapshots/math_core__parser__tests__comment.snap
---
source: crates/math-core/src/parser.rs
expression: "\\text{% comment}\n\\%as}"
---
[
  Text(
    text_style: None,
    text_size: None,
    text_voffset: None,
    text: "%as",
  ),
]
