crates/math-core/src/snapshots/math_core__parser__tests__displaystyle_ended_by_end.snap
---
source: crates/math-core/src/parser.rs
expression: "\\begin{matrix}\\sum\\displaystyle\\sum\\end{matrix}"
---
[
  Table(
    align: Centered,
    style: Some(Text),
    border_top: None,
    content: [
      Operator(
        op: "∑",
        attrs: OpAttrs(""),
        roles: OpRoles("ROLE_PREFIX"),
        size: None,
        left: Some(Zero),
        right: None,
      ),
      Row(
        nodes: [
          Operator(
            op: "∑",
            attrs: OpAttrs(""),
            roles: OpRoles("ROLE_PREFIX"),
            size: None,
            left: Some(Zero),
            right: Some(Zero),
          ),
        ],
        attrs: RowAttrs(
          color: None,
          style: Some(Display),
          math_shift_compact: false,
        ),
      ),
    ],
  ),
]
