crates/math-core/src/snapshots/math_core__parser__tests__displaystyle_ended_by_right.snap
---
source: crates/math-core/src/parser.rs
expression: "\\left(\\displaystyle \\int\\right)\\int"
---
[
  Row(
    nodes: [
      Operator(
        op: "(",
        attrs: OpAttrs(""),
        roles: OpRoles(""),
        size: None,
        left: None,
        right: None,
      ),
      Row(
        nodes: [
          Operator(
            op: "∫",
            attrs: OpAttrs(""),
            roles: OpRoles("ROLE_PREFIX"),
            size: None,
            left: Some(Zero),
            right: Some(Zero),
          ),
        ],
        attrs: RowAttrs(
          color: None,
          style: Some(Display),
          math_shift_compact: false,
        ),
      ),
      Operator(
        op: ")",
        attrs: OpAttrs(""),
        roles: OpRoles(""),
        size: None,
        left: None,
        right: Some(ThreeMu),
      ),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
    ),
  ),
  Operator(
    op: "∫",
    attrs: OpAttrs(""),
    roles: OpRoles("ROLE_PREFIX"),
    size: None,
    left: Some(Zero),
    right: Some(Zero),
  ),
]
