crates/math-core/src/snapshots/math_core__parser__tests__double_prime.snap
---
source: crates/math-core/src/parser.rs
expression: "f''"
---
[
  Sup(
    target: IdentifierChar("f", Default),
    symbol: Operator(
      op: "″",
      attrs: OpAttrs(""),
      roles: OpRoles(""),
      size: None,
      left: None,
      right: None,
    ),
  ),
]
