crates/math-core/src/snapshots/math_core__parser__tests__genfrac.snap
---
source: crates/math-core/src/parser.rs
expression: "\\genfrac(){1pt}{0}{1}{2}"
---
[
  Row(
    nodes: [
      Operator(
        op: "(",
        attrs: OpAttrs(""),
        roles: OpRoles(""),
        size: None,
        left: None,
        right: None,
      ),
      Frac(
        num: Number("1"),
        denom: Number("2"),
        lt_value: 0.1,
        lt_unit: Rem,
        attr: None,
      ),
      Operator(
        op: ")",
        attrs: OpAttrs(""),
        roles: OpRoles(""),
        size: None,
        left: None,
        right: None,
      ),
    ],
    attrs: RowAttrs(
      color: None,
      style: Some(Display),
      math_shift_compact: false,
    ),
  ),
]
