crates/math-core/src/snapshots/math_core__parser__tests__int_bounds_relation.snap
---
source: crates/math-core/src/parser.rs
expression: "{\\int_0^\\infty = 4}"
---
[
  Row(
    nodes: [
      SubSup(
        target: Operator(
          op: "∫",
          attrs: OpAttrs(""),
          roles: OpRoles("ROLE_PREFIX"),
          size: None,
          left: Some(Zero),
          right: Some(Zero),
        ),
        sub: Number("0"),
        sup: IdentifierChar("∞", Default),
      ),
      Operator(
        op: "=",
        attrs: OpAttrs(""),
        roles: OpRoles("ROLE_INFIX"),
        size: None,
        left: None,
        right: None,
      ),
      Number("4"),
    ],
    attrs: RowAttrs(
      color: None,
      style: None,
      math_shift_compact: false,
    ),
  ),
]
